# Super

./: .gitignore  .gitmodules  build.sh  meson.build
doc/: .$files.drawio.bkp  files.drawio  structure.drawio  type-system.drawio
lib/: meson.build
src/: ids.cpp  ids.hpp  meson.build  objects.cpp  objects.hpp  spb.cpp  typing.cpp  typing.hpp  xmltools.cpp  xmltools.hpp
